# UEFITool

./: .gitignore  .travis.yml  basetypes.h  descriptor.cpp  ffsengine.cpp  treeitem.cpp  treemodel.cpp  uefitool.cpp  uefitool.desktop  uefitool.h
OZMTool/: build_macos.sh  ozmtool.cpp  ozmtool.h  ozmtool_main.cpp  util.cpp  util.h
OZMTool/distorm/: operands.c
UEFIExtract/: CMakeLists.txt  ffsdumper.cpp  ffsdumper.h  uefiextract.cpp  uefiextract.h  uefiextract.pro  uefiextract_main.cpp
UEFIPatch/: patches.txt
UEFITool/: uefitool.h
common/: basetypes.h  bytearray.h  cbstring.h  descriptor.h  ffs.cpp  ffs.h  ffsparser.cpp  ffsparser.h  fit.h  fitparser.cpp  fitparser.h  me.h  parsingdata.h  peimage.cpp  peimage.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  types.cpp  types.h  utility.cpp  utility.h
